--- a/SistemaVentas/src/main/java/com/admin/ListProductsPanel.form
+++ b/SistemaVentas/src/main/java/com/admin/ListProductsPanel.form
@@ -36,18 +36,24 @@
         <Component class="javax.swing.JTable" name="table">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="7" rowCount="0">
+              <Table columnCount="8" rowCount="0">
                 <Column editable="false" title="ID" type="java.lang.Object"/>
                 <Column editable="false" title="Nombre" type="java.lang.Object"/>
                 <Column editable="false" title="Precio" type="java.lang.Object"/>
                 <Column editable="false" title="Mayoreo" type="java.lang.Object"/>
                 <Column editable="false" title="Cantidad en inventario" type="java.lang.Object"/>
+                <Column editable="false" title="Estatus" type="java.lang.Object"/>
                 <Column editable="false" title="Departamento" type="java.lang.Object"/>
                 <Column editable="true" title="Opciones" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
