--- a/SistemaVentas/src/main/java/com/admin/ListUsersPanel.form
+++ b/SistemaVentas/src/main/java/com/admin/ListUsersPanel.form
@@ -36,19 +36,25 @@
         <Component class="javax.swing.JTable" name="table">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="8" rowCount="0">
+              <Table columnCount="9" rowCount="0">
                 <Column editable="false" title="ID" type="java.lang.Object"/>
                 <Column editable="false" title="Nombre" type="java.lang.Object"/>
-                <Column editable="false" title="Apellido P" type="java.lang.Object"/>
-                <Column editable="false" title="Apellido M" type="java.lang.Object"/>
+                <Column editable="false" title="Apellido Paterno" type="java.lang.Object"/>
+                <Column editable="false" title="Apellido Materno" type="java.lang.Object"/>
+                <Column editable="false" title="Estatus" type="java.lang.Object"/>
                 <Column editable="false" title="Rol" type="java.lang.Object"/>
                 <Column editable="false" title="Tel&#xe9;fono" type="java.lang.Object"/>
-                <Column editable="false" title="Correo e." type="java.lang.Object"/>
+                <Column editable="false" title="Correo electr&#xf3;nico" type="java.lang.Object"/>
                 <Column editable="true" title="Opciones" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
